Updates to urls to portals directory

--- a/_posts/2011-01-16-race-tire-mounting-in-the-san-francisco-bay-area-peninsula.html
+++ b/_posts/2011-01-16-race-tire-mounting-in-the-san-francisco-bay-area-peninsula.html
@@ -16,6 +16,6 @@ redirect_from:
 
 <p>I’ll be tasked now with finding a local shop who will hopefully do it for cheaper. I was spoiled in St. Louis, I had access to the tire machine at <a href="http://www.soloperformance.com">www.soloperformance.com</a>, I had a % share in the machine, actually I still do. It might be cheaper just to ship wheels and tires to Dave and have him mount them.</p>
 
-<p>Getting them shipped back though might make that cost prohibitive <img style="border-bottom-style: none; border-right-style: none; border-top-style: none; border-left-style: none" class="wlEmoticon wlEmoticon-smile" alt="Smile" src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/38c1eaeeaf3c_1076/wlEmoticon-smile_2.png" /></p>
+<p>Getting them shipped back though might make that cost prohibitive <img style="border-bottom-style: none; border-right-style: none; border-top-style: none; border-left-style: none" class="wlEmoticon wlEmoticon-smile" alt="Smile" src="/assets/images/PublishThumbnails/Windows-Live-Writer/38c1eaeeaf3c_1076/wlEmoticon-smile_2.png" /></p>
 
 <p>Anyone got any leads to a good tire mounting shop on the peninsula in&#160; the San Francisco Bay Area?</p>
