--- a/_posts/2015-11-21-350z-and-missouri-safety-and-emissions-tests.html
+++ b/_posts/2015-11-21-350z-and-missouri-safety-and-emissions-tests.html
@@ -8,7 +8,7 @@ categories:
 redirect_from: 
     - "/Articles/itemId/560/350z-and-Missouri-Safety-and-Emissions-tests"
 ---
-<p><img title="image" style="border: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; background-image: none;" alt="image" src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/dfc33fa77b34_14347/image_thumb.png" width="100%" /></p>
+<p><img title="image" style="border: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; background-image: none;" alt="image" src="/assets/images/PublishThumbnails/Windows-Live-Writer/dfc33fa77b34_14347/image_thumb.png" width="100%" /></p>
 
 <p>The car failed Missouri safety and emissions testing today. When I pulled out of the driveway this morning something happened up front, on the brakes, one of the wheels locked up, "SLIP" and "VDC" lights came on and wouldn't shut off. Restarted the car, got out, checked for anything noticeable and drove down the road to the gas station. At the station I decided to plug the OBDII scanner in and sure enough, it was throwing an ABS code.</p>
 
