--- a/_posts/2015-11-21-missouri-safety-inspection-exhaust-hole-fail.html
+++ b/_posts/2015-11-21-missouri-safety-inspection-exhaust-hole-fail.html
@@ -8,7 +8,7 @@ categories:
 redirect_from: 
     - "/Articles/itemId/561/Missouri-Safety-inspection-exhaust-hole-fail"
 ---
-<p><img title="image" style="border: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; background-image: none;" alt="image" src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Missouri-Safety-inspection-exhaust-hole-_14613/image_thumb.png" width="100%" /></p>
+<p><img title="image" style="border: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; background-image: none;" alt="image" src="/assets/images/PublishThumbnails/Windows-Live-Writer/Missouri-Safety-inspection-exhaust-hole-_14613/image_thumb.png" width="100%" /></p>
 
 <p>Follow up to the failed emissions and safety test earlier this week.&nbsp; Last night I got under the car again and checked for leaks, found that one of the gaskets I hadn't touched was leaking, so I tried to cover that up with some exhaust tape.</p>
 
