--- a/_posts/2016-01-03-tracking-down-no-fm-reception-in-a-2003-350z-pioneer-avh-x3700bhs.html
+++ b/_posts/2016-01-03-tracking-down-no-fm-reception-in-a-2003-350z-pioneer-avh-x3700bhs.html
@@ -8,7 +8,7 @@ categories:
 redirect_from: 
     - "/Articles/itemId/563/Tracking-down-no-FM-reception-in-a-2003-350z-Pio"
 ---
-<p><img title="image" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="image" src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Tracking-down-no-FM-reception-in-a-2003-_13A5C/image_thumb.png" width="100%" /></p>
+<p><img title="image" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="image" src="/assets/images/PublishThumbnails/Open-Live-Writer/Tracking-down-no-FM-reception-in-a-2003-_13A5C/image_thumb.png" width="100%" /></p>
 
 <p>When I picked up the 350z in Chattanooga back in November, I figured out that the radio wasn&rsquo;t great, the sound was weak, and it didn&rsquo;t appear to pick up any FM signals whatsoever. Over the Xmas weekend I decided it was time to rip into the car to remove the stock Bose amp and subwoofer (behind the driver&rsquo;s seat) as well as try to tack down why the FM reception was non-existent.</p>
 
