--- a/_posts/2016-03-07-weekend-progress-on-the-350z.html
+++ b/_posts/2016-03-07-weekend-progress-on-the-350z.html
@@ -37,28 +37,28 @@ redirect_from:
 
 <p>&nbsp;</p>
 <div id="blogImages">
-    <a href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2011.29.47_2.jpg">
-        <img title="350z Parts before Unboxing" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="350z Parts before Unboxing" src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2011.29.47_thumb.jpg"
+    <a href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2011.29.47_2.jpg">
+        <img title="350z Parts before Unboxing" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="350z Parts before Unboxing" src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2011.29.47_thumb.jpg"
         width="244" height="184" />
     </a>
-    <a href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2019.51.37_2.jpg">
-        <img title="350z Splash Guard Installed" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="350z Splash Guard Installed" src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2019.51.37_thumb.jpg"
+    <a href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2019.51.37_2.jpg">
+        <img title="350z Splash Guard Installed" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="350z Splash Guard Installed" src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2019.51.37_thumb.jpg"
         width="244" height="184" />
     </a>
-    <a href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2020.38.07_2.jpg">
-        <img title="Lower intake manifold" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="Lower intake manifold" src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2020.38.07_thumb.jpg"
+    <a href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2020.38.07_2.jpg">
+        <img title="Lower intake manifold" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="Lower intake manifold" src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2020.38.07_thumb.jpg"
         width="244" height="184" />
     </a>
-    <a href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2021.33.33_2.jpg">
-        <img title="Lower intake manifold after cleaning" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="Lower intake manifold after cleaning" src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2021.33.33_thumb.jpg"
+    <a href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2021.33.33_2.jpg">
+        <img title="Lower intake manifold after cleaning" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="Lower intake manifold after cleaning" src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2021.33.33_thumb.jpg"
         width="244" height="184" />
     </a>
-    <a href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.37.40_2.jpg">
-        <img title="Strut tower bar getting plexidipped" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="Strut tower bar getting plexidipped" src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.37.40_thumb.jpg"
+    <a href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.37.40_2.jpg">
+        <img title="Strut tower bar getting plexidipped" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="Strut tower bar getting plexidipped" src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.37.40_thumb.jpg"
         width="244" height="184" />
     </a>
-    <a href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.54.30_2.jpg">
+    <a href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.54.30_2.jpg">
         <img title="Strut tower bar installed after getting plexidipped" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="Strut tower bar installed after getting plexidipped"
-        src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.54.30_thumb.jpg" width="244" height="184" />
+        src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.54.30_thumb.jpg" width="244" height="184" />
     </a>
 </div>
