--- a/_posts/2016-04-23-the-2016-autocross-season-so-far.html
+++ b/_posts/2016-04-23-the-2016-autocross-season-so-far.html
@@ -107,9 +107,9 @@ redirect_from:
     of damage).</p>
 
 <p>
-    <a href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/The-2016-Autocross-Season-So-Far_137CF/image_2.png">
+    <a href="/assets/images/PublishThumbnails/Open-Live-Writer/The-2016-Autocross-Season-So-Far_137CF/image_2.png">
         <img title="image" style="border-left-width: 0px; border-right-width: 0px; background-image: none; border-bottom-width: 0px; float: none; padding-top: 0px; padding-left: 0px; margin-left: auto; display: block; padding-right: 0px; border-top-width: 0px; margin-right: auto"
-        border="0" alt="image" src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/The-2016-Autocross-Season-So-Far_137CF/image_thumb.png" width="244" height="244">
+        border="0" alt="image" src="/assets/images/PublishThumbnails/Open-Live-Writer/The-2016-Autocross-Season-So-Far_137CF/image_thumb.png" width="244" height="244">
     </a>
 </p>
 
