--- a/_posts/2011-04-10-el-toro-prosolo-day-1.html
+++ b/_posts/2011-04-10-el-toro-prosolo-day-1.html
@@ -8,9 +8,9 @@ categories:
 redirect_from: 
     - "/Articles/itemId/526/El-Toro-ProSolo-Day-1"
 ---
-<p>I just don’t have the energy to do a full writeup for the ProSolo today, and to be honest, it won’t happen Sunday, and likely not Monday either <img style="border-bottom-style: none; border-right-style: none; border-top-style: none; border-left-style: none" class="wlEmoticon wlEmoticon-openmouthedsmile" alt="Open-mouthed smile" src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/086ec53de232_13331/wlEmoticon-openmouthedsmile_2.png" /></p>
+<p>I just don’t have the energy to do a full writeup for the ProSolo today, and to be honest, it won’t happen Sunday, and likely not Monday either <img style="border-bottom-style: none; border-right-style: none; border-top-style: none; border-left-style: none" class="wlEmoticon wlEmoticon-openmouthedsmile" alt="Open-mouthed smile" src="/assets/images/PublishThumbnails/Windows-Live-Writer/086ec53de232_13331/wlEmoticon-openmouthedsmile_2.png" /></p>
 
-<p>So what happened? Well, I’m sitting in 5th out of 8, 2nd in the Kumho class. I’m still hoping to get up to first in the K Class <img style="border-bottom-style: none; border-right-style: none; border-top-style: none; border-left-style: none" class="wlEmoticon wlEmoticon-smile" alt="Smile" src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/086ec53de232_13331/wlEmoticon-smile_2.png" /> With the contingency available that would mean a set of tires.</p>
+<p>So what happened? Well, I’m sitting in 5th out of 8, 2nd in the Kumho class. I’m still hoping to get up to first in the K Class <img style="border-bottom-style: none; border-right-style: none; border-top-style: none; border-left-style: none" class="wlEmoticon wlEmoticon-smile" alt="Smile" src="/assets/images/PublishThumbnails/Windows-Live-Writer/086ec53de232_13331/wlEmoticon-smile_2.png" /> With the contingency available that would mean a set of tires.</p>
 
 <p>Jodi Fordahl is driving with me as well. She’s doing great, I have a feeling she’ll be faster than me on Sunday.</p>
 
