--- a/_posts/2015-11-07-introducing-project350z-v3.html
+++ b/_posts/2015-11-07-introducing-project350z-v3.html
@@ -8,7 +8,7 @@ categories:
 redirect_from: 
     - "/Articles/itemId/558/Introducing-Project350z-V3"
 ---
-<p><img title="image" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="image" src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Introducing-Project350z-V3_14AF6/image_thumb_1.png" width="100%" /></p>
+<p><img title="image" style="border-width: 0px; padding-top: 0px; padding-left: 0px; display: inline; padding-right: 0px; border-style: solid; background-image: none;" alt="image" src="/assets/images/PublishThumbnails/Windows-Live-Writer/Introducing-Project350z-V3_14AF6/image_thumb_1.png" width="100%" /></p>
 
 <p>Earlier this week, Dave from SoloPerformance.com and I headed down to Chattanooga to pick up Project350z V3. A 2003 Nissan 350z Touring model, with 145k miles on the clock. The car was purchased from a fellow autocrosser, and is primarily prepped for SCCA&rsquo;s STU class.</p>
 
